--- a/src/main/PersonalData/PersonalData.fxml
+++ b/src/main/PersonalData/PersonalData.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -12,23 +13,23 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root fx:id="personalDataMainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="1050.0" stylesheets="@../Res/styles.css" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="personalDataMainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@../Res/styles.css" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <BorderPane layoutX="10.0" layoutY="10.0" prefHeight="780.0" prefWidth="1050.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <BorderPane layoutX="10.0" layoutY="10.0" prefHeight="800.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
             <Pane prefHeight="101.0" prefWidth="960.0" style="-fx-background-color: #037C99;" BorderPane.alignment="CENTER">
                <children>
-                  <ImageView fx:id="escapeHatchImage" fitHeight="98.0" fitWidth="105.0" onMouseClicked="#closeWizard" onMouseEntered="#onEscapeHatchEnter" onMouseExited="#onEscapeHatchExit" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand" x="26.0">
+                  <ImageView fx:id="escapeHatchImage" fitHeight="98.0" fitWidth="105.0" layoutX="54.0" layoutY="2.0" onMouseClicked="#closeWizard" onMouseEntered="#onEscapeHatchEnter" onMouseExited="#onEscapeHatchExit" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand" x="26.0">
                      <image>
                         <Image url="@../Res/Images/escape_hatch.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="182.0" fitWidth="548.0" layoutX="239.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="182.0" fitWidth="548.0" layoutX="339.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../Res/Images/progress_indicator_two.png" />
                      </image>
                   </ImageView>
-                  <Button layoutX="829.0" layoutY="13.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: #037C99;" styleClass="cursor-hand" text="Kundservice &amp; Hjälp" textFill="WHITE" wrapText="true">
+                  <Button layoutX="977.0" layoutY="11.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: #037C99;" styleClass="cursor-hand" text="Kundservice &amp; Hjälp" textFill="WHITE" wrapText="true">
                      <graphic>
                         <ImageView fitHeight="65.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -46,7 +47,7 @@
          <center>
             <Pane prefHeight="573.0" prefWidth="960.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
                <children>
-                  <Pane layoutX="112.0" layoutY="45.0" prefHeight="590.0" prefWidth="826.0" style="-fx-background-color: #B1D5F6;">
+                  <Pane layoutX="187.0" layoutY="55.0" prefHeight="590.0" prefWidth="826.0" style="-fx-background-color: white;" styleClass="dropShadow">
                      <children>
                         <Pane layoutX="23.0" layoutY="101.0" prefHeight="416.0" prefWidth="781.0">
                            <children>
@@ -180,7 +181,7 @@
                         </Pane>
                         <Pane layoutX="31.0" layoutY="529.0" prefHeight="52.0" prefWidth="763.0" style="-fx-background-color: white;">
                            <children>
-                              <Button contentDisplay="RIGHT" layoutX="572.0" layoutY="1.0" mnemonicParsing="false" onMouseClicked="#onNextButtonPressed" prefHeight="36.0" prefWidth="175.0" styleClass="nextButton" text="Gå vidare">
+                              <Button contentDisplay="RIGHT" layoutX="572.0" layoutY="1.0" mnemonicParsing="false" onMouseClicked="#onNextButtonPressed" prefHeight="36.0" prefWidth="175.0" text="Gå vidare">
                                  <font>
                                     <Font name="SansSerif Regular" size="22.0" />
                                  </font>
@@ -191,8 +192,12 @@
                                        </image>
                                     </ImageView>
                                  </graphic>
+                                 <styleClass>
+                                    <String fx:value="nextButton" />
+                                    <String fx:value="LessDropShadow" />
+                                 </styleClass>
                               </Button>
-                              <Button layoutX="14.0" layoutY="5.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="42.0" prefWidth="185.0" styleClass="prevButton" text="Fortsätt handla">
+                              <Button layoutX="14.0" layoutY="5.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="42.0" prefWidth="185.0" text="Fortsätt handla">
                                  <graphic>
                                     <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
                                        <image>
@@ -200,10 +205,14 @@
                                        </image>
                                     </ImageView>
                                  </graphic>
+                                 <styleClass>
+                                    <String fx:value="prevButton" />
+                                    <String fx:value="LessDropShadow" />
+                                 </styleClass>
                               </Button>
                            </children>
                         </Pane>
-                        <Pane layoutX="23.0" layoutY="24.0" prefHeight="43.0" prefWidth="778.0" style="-fx-background-color: white;">
+                        <Pane layoutX="23.0" layoutY="24.0" prefHeight="43.0" prefWidth="778.0" style="-fx-background-color: #B1D5F6;" styleClass="border">
                            <children>
                               <Label fx:id="pageNameLabel" layoutX="296.0" layoutY="5.0" text="Personuppgifter">
                                  <font>
