--- a/src/main/Timetable/Timetable.fxml
+++ b/src/main/Timetable/Timetable.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -11,13 +12,13 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<fx:root fx:id="timetableMainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="1050.0" stylesheets="@../Res/styles.css" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="timetableMainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@../Res/styles.css" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <BorderPane prefHeight="780.0" prefWidth="1050.0">
+      <BorderPane prefHeight="800.0" prefWidth="1200.0">
          <top>
             <Pane prefHeight="101.0" prefWidth="960.0" style="-fx-background-color: #037C99;" BorderPane.alignment="CENTER">
                <children>
-                  <Button layoutX="829.0" layoutY="13.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: #037C99;" styleClass="cursor-hand" text="Kundservice &amp; Hjälp" textFill="WHITE" wrapText="true">
+                  <Button layoutX="977.0" layoutY="11.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: #037C99;" styleClass="cursor-hand" text="Kundservice &amp; Hjälp" textFill="WHITE" wrapText="true">
                      <graphic>
                         <ImageView fitHeight="65.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -28,12 +29,12 @@
                      <font>
                         <Font name="SansSerif Bold" size="17.0" />
                      </font></Button>
-                  <ImageView fx:id="escapeHatchImage" fitHeight="98.0" fitWidth="105.0" onMouseClicked="#closeWizard" onMouseEntered="#onEscapeHatchEnter" onMouseExited="#onEscapeHatchExit" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand" x="26.0">
+                  <ImageView fx:id="escapeHatchImage" fitHeight="98.0" fitWidth="105.0" layoutX="54.0" layoutY="2.0" onMouseClicked="#closeWizard" onMouseEntered="#onEscapeHatchEnter" onMouseExited="#onEscapeHatchExit" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand" x="26.0">
                      <image>
                         <Image url="@../Res/Images/escape_hatch.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="182.0" fitWidth="548.0" layoutX="239.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="182.0" fitWidth="548.0" layoutX="339.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../Res/Images/progress_indicator_three.png" />
                      </image>
@@ -44,9 +45,9 @@
          <center>
             <Pane prefHeight="573.0" prefWidth="960.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
                <children>
-                  <Pane layoutX="112.0" layoutY="45.0" prefHeight="590.0" prefWidth="826.0" style="-fx-background-color: #B1D5F6;">
+                  <Pane layoutX="187.0" layoutY="55.0" prefHeight="590.0" prefWidth="826.0" style="-fx-background-color: white;" styleClass="dropShadow">
                      <children>
-                        <Pane layoutX="23.0" layoutY="24.0" prefHeight="43.0" prefWidth="778.0" style="-fx-background-color: white;">
+                        <Pane layoutX="23.0" layoutY="24.0" prefHeight="43.0" prefWidth="778.0" style="-fx-background-color: #B1D5F6;" styleClass="border">
                            <children>
                               <Label fx:id="pageNameLabel" layoutX="269.0" layoutY="-1.0" text="Välj leveranstid">
                                  <font>
@@ -56,7 +57,7 @@
                         </Pane>
                         <Pane layoutX="31.0" layoutY="529.0" prefHeight="52.0" prefWidth="763.0" style="-fx-background-color: white;">
                            <children>
-                              <Button contentDisplay="RIGHT" layoutX="572.0" mnemonicParsing="false" onMouseClicked="#onNextButtonPressed" prefHeight="36.0" prefWidth="175.0" styleClass="nextButton" text="Gå vidare">
+                              <Button contentDisplay="RIGHT" layoutX="572.0" mnemonicParsing="false" onMouseClicked="#onNextButtonPressed" prefHeight="36.0" prefWidth="175.0" text="Gå vidare">
                                  <font>
                                     <Font name="SansSerif Regular" size="22.0" />
                                  </font>
@@ -67,8 +68,12 @@
                                        </image>
                                     </ImageView>
                                  </graphic>
+                                 <styleClass>
+                                    <String fx:value="nextButton" />
+                                    <String fx:value="LessDropShadow" />
+                                 </styleClass>
                               </Button>
-                              <Button layoutX="14.0" layoutY="5.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="42.0" prefWidth="185.0" styleClass="prevButton" text="Fortsätt handla">
+                              <Button layoutX="14.0" layoutY="5.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="42.0" prefWidth="185.0" text="Fortsätt handla">
                                  <graphic>
                                     <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
                                        <image>
@@ -76,12 +81,16 @@
                                        </image>
                                     </ImageView>
                                  </graphic>
+                                 <styleClass>
+                                    <String fx:value="prevButton" />
+                                    <String fx:value="LessDropShadow" />
+                                 </styleClass>
                               </Button>
                            </children>
                         </Pane>
-                        <AnchorPane layoutX="23.0" layoutY="101.0" prefHeight="416.0" prefWidth="781.0">
+                        <AnchorPane layoutX="23.0" layoutY="101.0" prefHeight="359.0" prefWidth="781.0">
                            <children>
-                              <Pane prefHeight="416.0" prefWidth="781.0" style="-fx-background-color: white;">
+                              <Pane prefHeight="387.0" prefWidth="781.0" style="-fx-background-color: white;" styleClass="LessDropShadow">
                                  <children>
                                     <Label layoutX="16.0" layoutY="81.0" text="8.00-10.00">
                                        <font>
@@ -128,26 +137,23 @@
                                           <Font name="SansSerif Regular" size="12.0" />
                                        </font></Label>
                                     <FlowPane fx:id="timeTableFlowPane" layoutX="88.0" layoutY="52.0" prefHeight="335.0" prefWidth="676.0" />
-                                    <Line endX="-100.0" endY="383.0" layoutX="276.2" layoutY="33.0" startX="-100.0" startY="-33.0" />
-                                    <Line endX="-100.0" endY="383.0" layoutX="375.6" layoutY="33.0" startX="-100.0" startY="-33.0" />
-                                    <Line endX="-100.0" endY="383.0" layoutX="475.8" layoutY="33.0" startX="-100.0" startY="-33.0" />
-                                    <Line endX="-100.0" endY="383.0" layoutX="575.8" layoutY="33.0" startX="-100.0" startY="-33.0" />
-                                    <Line endX="-100.0" endY="383.0" layoutX="676.0" layoutY="33.0" startX="-100.0" startY="-33.0" />
-                                    <Line endX="-100.0" endY="383.0" layoutX="775.0" layoutY="33.0" startX="-100.0" startY="-33.0" />
-                                    <Line endX="-100.0" endY="383.0" layoutX="181.0" layoutY="33.0" startX="-100.0" startY="-33.0" />
+                                    <Line endX="-99.99998474121094" endY="354.0" layoutX="276.2" layoutY="33.0" startX="-100.0" startY="-33.0" />
+                                    <Line endX="-100.0000228881836" endY="354.0" layoutX="375.6" layoutY="33.0" startX="-100.0" startY="-33.0" />
+                                    <Line endX="-100.00001525878906" endY="354.0" layoutX="475.8" layoutY="33.0" startX="-100.0" startY="-33.0" />
+                                    <Line endX="-99.99995422363281" endY="354.0" layoutX="575.8" layoutY="33.0" startX="-100.0" startY="-33.0" />
+                                    <Line endX="-100.0" endY="354.0" layoutX="676.0" layoutY="33.0" startX="-100.0" startY="-33.0" />
+                                    <Line endX="-100.0" endY="354.0" layoutX="775.0" layoutY="33.0" startX="-100.0" startY="-33.0" />
+                                    <Line endX="-100.0" endY="352.5" layoutX="181.0" layoutY="33.0" startX="-100.0" startY="-33.0" />
                                     <Line endX="680.0" layoutX="101.0" layoutY="133.0" startX="-100.0" />
                                     <Line endX="680.0" layoutX="101.0" layoutY="219.0" startX="-100.0" />
                                     <Line endX="680.0" layoutX="101.0" layoutY="305.0" startX="-100.0" />
                                     <Line endX="680.0" layoutX="101.0" layoutY="52.0" startX="-100.0" />
-                                    <Line endX="680.0" layoutX="101.0" layoutY="385.0" startX="-100.0" />
                                  </children>
                               </Pane>
                            </children>
                         </AnchorPane>
                      </children>
                   </Pane>
-                  <Button fx:id="nextWeekButton" layoutX="960.0" layoutY="271.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="52.0" styleClass="cursor-hand" text="Nästa vecka" wrapText="true" />
-                  <Button fx:id="previousWeekButton" layoutX="26.0" layoutY="271.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="52.0" styleClass="cursor-hand" text="Förra vecka" wrapText="true" />
                </children>
             </Pane>
          </center>
