--- a/src/main/ShoppingCartItem/ShoppingCartItem.fxml
+++ b/src/main/ShoppingCartItem/ShoppingCartItem.fxml
@@ -1,49 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<fx:root fx:id="shuoppingCardItem" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="230.0" style="-fx-background-color: #F3F3F3;" stylesheets="@../Res/styles.css" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="shuoppingCardItem" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="260.0" style="-fx-background-color: #F3F3F3;" stylesheets="@../Res/styles.css" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="productNameLabel" layoutX="62.0" layoutY="-7.0" prefHeight="47.0" prefWidth="126.0" text="Ekologisk blandfärs" wrapText="true">
+      <Label fx:id="productNameLabel" layoutX="2.0" layoutY="-5.0" prefHeight="47.0" prefWidth="201.0" text="Ekologisk blandfärs" wrapText="true">
          <font>
-            <Font name="SansSerif Regular" size="14.0" />
+            <Font name="SansSerif Regular" size="17.0" />
          </font></Label>
-      <ImageView fx:id="itemImage" fitHeight="57.0" fitWidth="70.0" layoutX="2.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="itemImage" fitHeight="55.0" fitWidth="55.0" layoutX="143.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
             <Image url="@../Res/Images/chick.png" />
          </image></ImageView>
-      <Label fx:id="priceLabel" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="171.0" layoutY="46.0" prefHeight="25.0" prefWidth="57.0" styleClass="san-serif" text="kr" textAlignment="CENTER" underline="true">
+      <Label fx:id="priceLabel" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="128.0" layoutY="36.0" prefHeight="25.0" prefWidth="71.0" styleClass="san-serif" text="kr" textAlignment="CENTER" underline="true">
+         <font>
+            <Font name="SansSerif Regular" size="15.0" />
+         </font></Label>
+      <ImageView fx:id="minusImage" fitHeight="25.0" fitWidth="25.0" layoutX="9.0" layoutY="36.0" onMouseClicked="#onMinusButtonPressed" onMouseEntered="#onMinusEnter" onMouseExited="#onMinusExit" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand">
+         <image>
+            <Image url="@../Res/Images/plus_minus_alt/minus_alt.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="plusImage" fitHeight="25.0" fitWidth="25.0" layoutX="103.0" layoutY="36.0" onMouseClicked="#onPlusButtonPressed" onMouseEntered="#onPlusEnter" onMouseExited="#onPlusExit" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand">
+         <image>
+            <Image url="@../Res/Images/plus_minus_alt/plus_alt.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="paperBinImage" fitHeight="32.0" fitWidth="32.0" layoutX="217.0" layoutY="27.0" onMouseClicked="#onPaperbinPressed" onMouseEntered="#onPaperBinEnter" onMouseExited="#onPaperBinExit" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand">
+         <image>
+            <Image url="@../Res/Images/paperbin_blue.png" />
+         </image>
+      </ImageView>
+      <Label fx:id="paperBinLabel" layoutX="207.0" layoutY="6.0" text="Ta bort">
+         <font>
+            <Font name="SansSerif Regular" size="15.0" />
+         </font></Label>
+      <TextField fx:id="amountTextField" alignment="CENTER" editable="false" layoutX="38.0" layoutY="36.0" prefHeight="30.0" prefWidth="63.0">
          <font>
             <Font name="SansSerif Regular" size="14.0" />
-         </font></Label>
-      <ImageView fx:id="minusImage" fitHeight="25.0" fitWidth="25.0" layoutX="62.0" layoutY="37.0" onMouseClicked="#onMinusButtonPressed" onMouseEntered="#onMinusEnter" onMouseExited="#onMinusExit" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand">
-         <image>
-            <Image url="@../Res/Images/minus.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="plusImage" fitHeight="25.0" fitWidth="25.0" layoutX="148.0" layoutY="37.0" onMouseClicked="#onPlusButtonPressed" onMouseEntered="#onPlusEnter" onMouseExited="#onPlusExit" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand">
-         <image>
-            <Image url="@../Res/Images/plus.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="paperBinImage" fitHeight="25.0" fitWidth="25.0" layoutX="197.0" layoutY="13.0" onMouseClicked="#onPaperbinPressed" onMouseEntered="#onPaperBinEnter" onMouseExited="#onPaperBinExit" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand">
-         <image>
-            <Image url="@../Res/Images/paperbin.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="190.0" layoutY="-1.0" text="Ta bort">
-         <font>
-            <Font name="SansSerif Regular" size="12.0" />
-         </font></Label>
-      <TextField fx:id="amountTextField" editable="false" layoutX="88.0" layoutY="37.0" prefHeight="30.0" prefWidth="59.0">
-         <font>
-            <Font name="SansSerif Regular" size="13.0" />
          </font>
       </TextField>
+      <Line endX="-5.50006103515625" endY="32.0" layoutX="210.0" layoutY="28.0" startX="-5.5" startY="-16.0" />
    </children>
+   <styleClass>
+      <String fx:value="LessDropShadow" />
+      <String fx:value="LessRound-corners" />
+   </styleClass>
 </fx:root>
