--- a/src/main/Res/styles.css
+++ b/src/main/Res/styles.css
@@ -204,8 +204,17 @@
     -fx-font-family: sans-serif;
 
     -fx-background-color: #A0FFAA;
-
 }
+
+.till-kassan-empty{
+    -fx-background-color: #E0E0E0;
+    -fx-text-fill: #464646;
+    -fx-font-size: 30;
+    -fx-text-align: center;
+    -fx-align-content: center;
+    -fx-font-family: sans-serif;
+}
+
 
 .nextButton{
 
