Pliancy for TimeTableItems

--- a/src/main/Product/Product.fxml
+++ b/src/main/Product/Product.fxml
@@ -49,6 +49,7 @@
                      <styleClass>
                         <String fx:value="cursor-hand" />
                         <String fx:value="productBuyButton" />
+                        <String fx:value="LessDropShadow" />
                      </styleClass>
                   </Button>
                </children>
